--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,14 @@
    padding: 0%;
    margin: 0%;
 }
+#tsparticles {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-color: black;
+  box-sizing: border-box;
+}
+
 
 /* html {
   
